--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html {
 .principal {
     flex-grow: 1;
 	flex-basis: auto;
-	min-width: 600px;
+	min-width: 300px;
 	padding: 20em 2em 2em;
 	box-sizing: border-box;
 	display: flex;
@@ -20,47 +20,18 @@ html {
 	border-radius: 10px;
 	gap: 2em;
 }
-.exercicio
- {
-	min-width: 170px;
-	max-width: 170px;
-	height: 180px;
-	padding-top: 80px;
-	background-color: #c8d836;
-	box-shadow: inset 0 6px 0 2px #e64a3e, 0 -93px 0 -77px #3b1045, 0 -93px 0 -72px #d84736, 0 -93px 0 -68px #3b1045;
-	background-image: linear-gradient(to right, transparent 5px, transparent 20px, transparent 1px, transparent 25px, transparent 5px, transparent 20px, transparent 20px, transparent 86px, #c1382e 45px, #c1382e 230px, transparent 25px, transparent 172px );
-    background-position: center 254px;
-    background-size: 305px 6px;
-    background-repeat: repeat-x; 
-    border: 5px solid #410c38;
-    border-radius: 85px 85px 44px 44px;
-    display: inline-block;
-    vertical-align: top;
-    flex-basis: auto;
-    flex-grow: 1;
+
+.principal h1 {
+    color: #FFFFFF;
+    font-size: 2em;
+    margin: 0 0 0.5em;
 }
-.exercicio:before, .exercicio:after {
-    display: block;
-    content: '';
-    position: absolute;
+.principal p {
+    color: #FFFFFF;
+    font-size: 1.2em;
+    margin: 0 0 1em;
 }
-.exercicio:before {
-    height: 75px;
-    width: 118px;
-    background-image: radial-gradient(circle closest-corner at 13px 29px , #af342c, #af342c 2px, transparent 2px, transparent), radial-gradient(circle closest-corner at 13px 29px , #491033, #491033 4px, transparent 4px, transparent), linear-gradient(to bottom, transparent 10px, transparent 15px, #491033 5px, #491033 18px, transparent 18px, transparent 100px), linear-gradient(to right, #af342c 10px, #af342c 10px, transparent 10px, transparent 16px, #af342c 9px, #af342c 50px), linear-gradient(to bottom, #af342c 8px, #af342c 16px, #491033 8px, #491033 30px, #af342c 20px, #af342c 72px, #af342c 10px, #af342c 57px, #af342c 5%);
-    margin-left: 22px;
-    margin-top: 58px;
-    border: 4px solid #491033;
-    border-radius: 11px;
-    box-shadow: 0 4px 0 0 #c1382e, inset 0px 4px 1px 0 #c03527;
-    content: '||';
-    color: transparent;
-    font-family: Comic Sans MS;
-    font-weight: bold;
-    z-index: 1;
-    text-shadow: rgb(0, 0, 0) -2px -86px 0px;
-    font-size: 14px;
-}
+
 .exercicio:after {
     margin-left: 67px;
     margin-top: -30px;
@@ -72,7 +43,7 @@ html {
     transform: rotate(45deg);
 }
 .adicionar {
-    width: 100%;
+    width: 50%;
 }
 .adicionar input {
     width: 100%;
@@ -98,7 +69,7 @@ html {
     list-style: none;
     padding: 0.6em 2em;
     background: #FFFFFF;
-    border-radius: 10px;
+    border-radius: 1px;
     margin: 0 0 1em;
     width: 100%;
     box-sizing: border-box;
@@ -108,7 +79,7 @@ html {
     font-size: 20px;
 }
 .item strong {
-    border-radius: 50%;
+    border-radius: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -116,5 +87,28 @@ html {
     height: 40px;
     Background: #b16e93;
     font-weight: 400;
+}
+.exercicio {
+    width: 300px;
+    height: 300px;
+    border-radius: 10px;
+    background-color: #ccc;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+}
+
+.exercicio button {
+    background: rgba(0,0,0,0.6);
+    color: white;
+    border: none;
+    padding: 0.5em;
+    cursor: pointer;
+    font-size: 14px;
+    position: absolute;
+    bottom: 20px;
+    border-radius: 5px;
 }
 
