--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,27 @@ html {
     padding: 2em;
 	font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+
 .app-titulo {
     width: 100%;
     text-align: center;
     margin-bottom: 2em;
 }
 
+.selecionar {
+    margin: 1em 0;
+    text-align: center;
+    color: rgb(112, 48, 83);
+    font-size: 1em;
+    font-family: 'Georgia', serif;
+    text-shadow: 1px 1px 5px #f7bed0;
+
+}
+
 .app-titulo h1 {
     font-size: 4em;
-    color: #703053;
+    color: rgb(112, 48, 83);
     font-family: 'Georgia', serif;
     font-weight: bold;
     letter-spacing: 2px;
@@ -28,12 +40,14 @@ html {
     justify-content: center;
     align-items: flex-start;
 	gap: 20px;
+    color: #000000;
 }
 
 .principal h1  {
     color: #FFFFFF;
     font-size: 2em;
     margin: 0 0 0.5em;
+    text-align: center;
 }
 
 .principal h2, .doisDias h2, .tresDias h2, .quatroDias h2, .cincoDias h2, .seisDias h2, .seteDias h2 {
@@ -49,6 +63,7 @@ html {
     color: #FFFFFF;
     font-size: 1.2em;
     margin: 0 0 1em;
+
 }
 
 .exercicio:after {
@@ -78,6 +93,10 @@ html {
 }
 .adicionar label {
     display: block;
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+    color: #FFFFFF;
 }
 .cadastrar {
     background-color: #3d1e3c;
@@ -116,7 +135,7 @@ html {
     background: #b16e93;
     font-weight: 400;
     padding: 0.5em 1em; /* Ajusta o tamanho conforme o conteúdo */
-    min-width: 10px;    /* garante tamanho mínimo */
+    min-width: 20px;    /* garante tamanho mínimo */
 }
 .exercicio {
     flex: 0 0 200px;
@@ -155,6 +174,7 @@ html {
     border-radius: 5px;
     transition: background 0.3s ease;
     font-size: 1em;
+    text-align: center;
     padding: 0.5em 0.5em;
     }
 
@@ -175,6 +195,33 @@ html {
 	gap: 2em;
     overflow: auto;
 }
+.rodape {
+    flex-grow: 1;
+    background: rgba(255, 255, 255, 0.8);
+    padding:  var(--gap);
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: auto;
+    max-width: auto;
+    box-sizing: border-box;
+    font-size: 1.2em;
+    color: #0c0b0b;
+    line-height: 1.2;
+    font-family: 'Georgia', serif;
+    letter-spacing: 1px;
+    
+}
+.rodape a {
+    color: #703053;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+
+
+
+
 
     /* para dispositivos moveis */
     @media (max-width: 900px) {
@@ -187,3 +234,4 @@ html {
     width: 100%;
     }
 }
+
