--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ html {
 	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-
 .app-titulo {
     width: 100%;
     text-align: center;
@@ -50,7 +49,7 @@ html {
     text-align: center;
 }
 
-.principal h2, .doisDias h2, .tresDias h2, .quatroDias h2, .cincoDias h2, .seisDias h2, .seteDias h2 {
+.principal h1, h2, .doisDias h2, .tresDias h2, .quatroDias h2, .cincoDias h2, .seisDias h2, .seteDias h2 {
     color: #FFFFFF;
     font-size: 1.5em;
     margin: 0 0 0.5em;
